--- a/HicoDetTool/config.ini
+++ b/HicoDetTool/config.ini
@@ -11,3 +11,5 @@ verb_list_json = data/hico_processed/verb_list.json
 
 #images
 hico_images = D:/Corpora/HICO-DET/hico_20160224_det/images
+
+bbox_merge_threshold = 0.7
