--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@
 HicoDetTool/.idea/
 HicoDetTool/data/hico_processed/*
 HicoDetTool/data/hico_mat/*
+HicoDetTool/data/poses/*
 AffordanceModel/.idea/
 *.pyc
+HicoDetTool/SmallJsonMerger.py
