--- a/HicoDetTool/config.ini
+++ b/HicoDetTool/config.ini
@@ -12,4 +12,8 @@ verb_list_json = data/hico_processed/verb_list.json
 #images
 hico_images = D:/Corpora/HICO-DET/hico_20160224_det/images
 
+[PROCESSING]
 bbox_merge_threshold = 0.7
+
+[POSE]
+dataset = data/poses/halpe136-train.json
