--- a/HicoDetTool/config.ini
+++ b/HicoDetTool/config.ini
@@ -12,8 +12,22 @@ verb_list_json = data/hico_processed/verb_list.json
 #images
 hico_images = D:/Corpora/HICO-DET/hico_20160224_det/images
 
+hoi_annotation = data/HOI.txt
+
+
 [PROCESSING]
 bbox_merge_threshold = 0.7
 
 [POSE]
-dataset = data/poses/halpe136-train.json
+train_dataset = data/poses/halpe136-train.json
+test_dataset = data/poses/halpe136-test.json
+
+
+[MODEL]
+name = TestModel
+#[resnet, alexnet, vgg, squeezenet, densenet, inception, efficient]
+basemodel = resnet
+batch_size = 100
+num_epochs = 5
+# Flag for feature extracting. When False, we finetune the whole model, when True we only update the reshaped layer params
+feature_extract = True
