--- a/HicoDetTool/config.ini
+++ b/HicoDetTool/config.ini
@@ -24,7 +24,7 @@ test_dataset = data/poses/halpe136-test.json
 
 
 [MODEL]
-name = TestModel
+#name = TestModel
 #[resnet, alexnet, vgg, squeezenet, densenet, inception, efficient]
 basemodel = resnet
 batch_size = 100
