--- a/HicoDetTool/config.ini
+++ b/HicoDetTool/config.ini
@@ -22,6 +22,7 @@ bbox_merge_threshold = 0.7
 train_dataset = data/poses/halpe136-train.json
 test_dataset = data/poses/halpe136-test.json
 
+desc_dataset = data/image_captions.json
 
 [MODEL]
 #name = TestModel
