--- a/HicoDetTool/config.ini
+++ b/HicoDetTool/config.ini
@@ -27,8 +27,14 @@ desc_dataset = data/image_captions.json
 [MODEL]
 #name = TestModel
 #[resnet, alexnet, vgg, squeezenet, densenet, inception, efficient]
-basemodel = resnet
-batch_size = 100
+# ...
+base_image_model = google/vit-base-patch16-224-in21k
+base_bert_model = bert-base-uncased
+#base_bert_model = prajjwal1/bert-tiny
+
+batch_size = 2
 num_epochs = 10
+learning_rate = 0.001
+optimizer = adam
 # Flag for feature extracting. When False, we finetune the whole model, when True we only update the reshaped layer params
-feature_extract = True
+feature_extract = False
