--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ AffordanceModelOld/.idea/
 HoiOriClassifier/.idea/
 HoiOriClassifier/data/models
 HoiOriClassifier/results_hico_merge_2015.json
+HoiOriClassifier/hicodet_cut/*
+
+OriAffCheckClassify/.idea/*
