--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,7 @@ HoiOriClassifier/.idea/
 HoiOriClassifier/data/models
 HoiOriClassifier/results_hico_merge_2015.json
 HoiOriClassifier/hicodet_cut/*
-
+HoiOriClassifier/images_old/*
 OriAffCheckClassify/.idea/*
+
+HoiOriClassifier/results_hico_merge_2015_v2.json
