--- a/HicoDetTool/config.ini
+++ b/HicoDetTool/config.ini
@@ -26,7 +26,8 @@ desc_dataset = data/image_captions.json
 
 [MODEL]
 #upt_model = data/model/ckpt_33552_16.pt
-upt_model = D:/Corpora/upt-r50-sanity/ckpt_41955_15.pt
+#upt_model = D:/Corpora/upt-r50-sanity/ckpt_41955_15.pt
+upt_model = C:\Workspace\PyCharm\affordance-annotation\HoiOriClassifier\data\models\robust-sweep-8_ckpt_41940_20.pt
 hf_detr = facebook/detr-resnet-50
 
 num_classes = 2
