--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ HoiOriClassifier/images_old/*
 OriAffCheckClassify/.idea/*
 
 HoiOriClassifier/results_hico_merge_2015_v2.json
+HoiOriClassifier/results_hico_merge_2015_v2.json
+HoiOriClassifier/results_hico_merge_2015_v2_with-unary-token.json
+HoiOriClassifier/results_hico_merge_2015_v2.json
