--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ HoiOriClassifier/results_hico_merge_2015_v2.json
 HoiOriClassifier/results_hico_merge_2015_v2.json
 HoiOriClassifier/results_hico_merge_2015_v2_with-unary-token.json
 HoiOriClassifier/results_hico_merge_2015_v2.json
+HoiOriClassifier/results_hico_merge_2015_v2_with-unary-pair-token_thresh_0_8.json
+HoiOriClassifier/results_hico_merge_2015_v2_with-unary-pair-token_thresh_0_8_lines.json
+HoiOriClassifier/results_hico_merge_2015_v2_with-unary-pair-token_thresh_0_8_susbet50.json
+*.csv
